Skip to content

VLC doesn't support TLS on Windows

Test with VLC 1.0.5, 1.1 and 1.2, Windows XP SP3.

Hi,

VLC for Windows can't open a network stream with HTTPS / TSL protocol. Once certificate is accepted, the log is :

main debug: pre buffering
main error: Read error: No such file or directory
access_http debug: failed reading chunk-header line
main error: cannot pre fill buffer
main warning: cannot create a stream_t from access
gnutls debug: GnuTLS deinitialized

It works with VLC for Linux (and VLC for Windows can open an HTTP network stream).

See also http://forum.videolan.org/viewtopic.php?f=2&t=76502.

Sly

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information