Win32: use the OS list of certificate authorities

Ref #3682 and #3666
Now, we have
[022d6ffc] main tls client debug: TLS client session initialized
instead of
[004e6ffc] gnutls tls client error: Certificate could not be verified

However, this still doesn't work fine, since we got a:
"access_http acccess error: failed to read answer"

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>